--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -20,3 +20,14 @@
 .App-link {
   color: #09d3ac;
 }
+
+.FormControl {
+  justify-content: center;
+  margin-right: 100px;
+  align-content: center
+}
+
+.Navbar {
+  color: #258078
+
+}
