--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -21,16 +21,23 @@
   color: #09d3ac;
 }
 
+.navbar {
+  margin-bottom: 20px;
+}
+
 .FormControl {
   justify-content: center;
   margin-right: 100px;
   align-content: center
 }
 
-.Navbar {
-  color: #258078
-}
-
 .container {
     list-style-type: none;
+
 }
+
+@media (min-width: 576px) {
+     .sidebar {
+          max-width: 280px;
+     }
+ }
