--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -22,6 +22,8 @@
 }
 
 body {
+  font-family: monospace;
+  font-size: 14px;
   background-color:#A9C6D9;
   background-image: linear-gradient(to right, white, #A9C6D9);
 
@@ -30,7 +32,10 @@ body {
 .navbar {
   margin-bottom: 20px;
   color: #deeaee;
-
+  font-family: monospace;
+  font-size: 14px;
+  text-align: center;
+  
 }
 
 .FormControl {
@@ -75,7 +80,7 @@ body {
 
 .material-icons {
   padding-top: 10px;
-  color: #CFE6E4;
+  color: #c94c4c;
   font-size: 2em;
   height: 3rem;
 
