fixed font, navbar, lost home button

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  font-family: monospace;
+  font-family: apercu;
   font-size: 14px;
   background-color:#618685;
   background-image: linear-gradient(to right, white, #618685);
@@ -32,8 +32,9 @@ body {
 .navbar {
   margin-bottom: 20px;
   color: #deeaee;
-  font-family: monospace;
-  font-size: 14px;
+  font-family: Apercu;
+  font-variant: small-caps;
+  font-size: 18px;
   text-align: center;
   
 }
@@ -65,7 +66,7 @@ body {
 .card-columns {
    display: block;
    columns: auto;
-   column-gap: 20px;
+   column-gap: 40px;
    margin: 20px;
    padding: 50px;
    color: gray;
@@ -93,3 +94,12 @@ body {
   text-align: center;
 }
 
+.container {
+  font-size: 14px;
+  font-family: Apercu;
+
+}
+
+#welcome-text {
+  margin-top: 20px;
+}
