--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -110,3 +110,10 @@ body {
 #welcome-text {
   margin-top: 20px;
 }
+
+.thumbnail {
+  width: 60px;
+  height: 60px;
+  margin-right: 18px;
+  margin-left: 15px;
+} 
