Bolded question like Quora has, and font is black for now

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -82,7 +82,7 @@ body {
 }
 
 .card-title {
-  color: #BF7C63;
+  color: rgb(8, 4, 2);
   text-align: left;
 
 }
@@ -124,3 +124,11 @@ body {
   margin-right: 18px;
   margin-left: 15px;
 } 
+
+.main-question-body {
+  color: rgb(8, 4, 2);
+  text-align: left;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+
+}
