--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -140,15 +140,9 @@ body {
 
 }
 
-#welcome-text {
-  margin-top: 30px;
-
-}
-
 .k-textbox {
   width: 300px;
 }
-
 
 
 .thumbnail {
@@ -171,12 +165,12 @@ body {
 }
 
 .category-detail {
-  border: 0.1rem outset #FFE1D4;
   margin-right: 20px;
   margin-top: 10px;
   text-align: left;
-  font: 10px;
+  font: 14px;
   color: gray;
+  font-style: italic;
   width: fit-content;
   padding-left: 5px;
   padding-right: 5px
@@ -188,7 +182,7 @@ body {
   font-size: 18px;
   font-weight: bold;
   text-align: left;
-  border: 0.1rem outset #FFE1D4;
+  border: 0.1rem outset;
   background-color: white;
   padding: 10px
 }
@@ -245,4 +239,5 @@ a.question-card {
 
 .navbar-text {
   margin-left: 50px;
+  font-size: 18px;
 }
