--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -242,3 +242,24 @@ a.card {
 .navbar-text {
   margin-left: 50px;
 }
+.cat-home {
+  color: #99D1CB;
+  font-size: 16px;
+  font-style: italic;
+  border: 0.1rem;
+  display: inline-block;
+  text-align: right;
+}
+.cat-home+.cat-home::before {
+  display: inline-block;
+  white-space: pre;
+  content: ", ";
+}
+.cat-align {
+  text-align: right;
+}
+.cat-color {
+  color: #99D1CB;
+  font-size: 16px;
+  font-style: italic;
+}
